minor css change
commende lines 147 - 153 of layout.css

--- a/tclayout/css/layout.css
+++ b/tclayout/css/layout.css
@@ -144,10 +144,10 @@ img, object, embed, video {
 	width: 41.0256%;
 	display: block;
 }
-}#header {
+}/*#header {
 	clear: none;
 	float: left;
 	margin-left: 0;
 	width: 100%;
 	display: block;
-}
+}*/
