--- a/tclayout2/css/time_capsule_style.css
+++ b/tclayout2/css/time_capsule_style.css
@@ -1,1 +1,62 @@
-.main {	-webkit-border-radius: 0em 2em 0em 2em;	-khtml-border-radius: 0em 2em 0em 2em;	-moz-border-radius: 0em 2em 0em 2em;	border-radius: 0em 2em 0em 2em;	margin: 1px;	padding: 1px;	width: 960px;	border: .5px solid #999999;	-webkit-box-shadow: 5px 5px 0px 0px #666;	-moz-box-shadow: 5px 5px 5px 5px #666;	box-shadow: 5px 5px 5px 5px #666;}	#container {	width: 80%;	max-width: 960px;	min-width: 780px;	margin-right: auto;	margin-left: auto;/*auto (margin-right and margin-left) center the container on the page.*/}#video_main{	background-color: #D6D6D6;	width: 48%;	float: left;	background-image: url(../images/bg.png);	background-repeat: repeat;	color: #FFFFFF;	text-align: center;	margin-bottom: 20px;}#notes{	background-color: #33CCFF;	width: 47%;	float: right;	padding-top: 10px;	padding-right: 5px;	padding-left: 10px;}#tweets{	background-color: yellow;	width: 47%;	clear: left;	margin-top: 5em;	padding-top: 10px;	padding-right: 5px;	padding-left: 10px;}
+@import url("../webfonts/droid_regular_macroman/stylesheet.css");
+@import url("../webfonts/panefresco-fontfacekit/stylesheet.css");
+.main {
+	-webkit-border-radius: 0em 1em 0em 1em;
+	-khtml-border-radius: 0em 1em 0em 1em;
+	-moz-border-radius: 0em 1em 0em 1em;
+	border-radius: 0em 1em 0em 1em;
+	margin: 1px;
+	padding: 1px;
+	width: 960px;
+	border: .5px solid #999999;
+	-webkit-box-shadow: 2px 2px 0px 0px #666;
+	-moz-box-shadow: 2px 2px 2px 2px #666;
+	box-shadow: 2px 2px 2px 2px #666;
+	font-family: "Panefresco1wtRegular";
+}	
+#container {
+	width: 80%;
+	max-width: 960px;
+	min-width: 780px;
+	margin-right: auto;
+	margin-left: auto;/*auto (margin-right and margin-left) center the container on the page.*/
+}
+#headline {
+	background-color: #3C3;
+	font-family: "Panefresco1wtRegular";
+	color: #FFF;
+	margin-bottom: 15px;
+	text-align: center;
+	font-size: 24px;
+	font-weight: 100;
+	font-variant: normal;
+}
+#video_main{
+	background-color: #D6D6D6;
+	width: 48%;
+	float: left;
+	background-image: url(../images/bg.png);
+	background-repeat: repeat;
+	color: #FFFFFF;
+	text-align: center;
+	margin-bottom: 15px;
+}
+
+#notes{
+	background-color: #33CCFF;
+	width: 47%;
+	float: right;
+	padding-top: 10px;
+	padding-right: 5px;
+	padding-left: 10px;
+}
+
+#tweets{
+	background-color: yellow;
+	width: 47%;
+	clear: left;
+	margin-top: 5em;
+	padding-top: 10px;
+	padding-right: 5px;
+	padding-left: 10px;
+}
