Placeholder iPadlandscape.css and move body css
This commit adds a blank ipadlandscape.css file with associatied media
query in the html file. Also moves the css body styles from the html
file to the time_capsule.css file.

--- a/tclayout2/css/time_capsule_style.css
+++ b/tclayout2/css/time_capsule_style.css
@@ -1,1 +1,94 @@
-@charset "UTF-8";@import url("../_fonts/RopaSansRegular/stylesheet.css");/*time_capsule_style.css*/.main {	margin: 1px;	padding: 1px;}	#container {	width: 95%;	max-width: 960px;	min-width: 0px;	margin-right: auto;	margin-left: auto;/	font-size: 16px;	border-bottom-width: thin;	border-bottom-style: solid;	border-bottom-color: #FFF;		}#headline {	margin-bottom: 50px;	height: 28px;}#section{	width: 95%;	margin-right: auto;	margin-left: auto;/	clear: left;	max-width: 960px;	min-width: 0px;}#video_main{	width: 100%;	float: none;	margin-bottom: 20px;	clear: none;	border-bottom-width: thin;	border-bottom-style: solid;	border-bottom-color: #FFF;}#notes{	background-color: #FFFFFF;	width: 47%;	float: right;	padding-top: 10px;	padding-right: 5px;	padding-left: 10px;	margin-left:;/*	border-top-color: #0000FF;	border-right-color: #0000FF;	border-bottom-color: #0000FF;	border-left-color: #0000FF;*/	-webkit-border-radius: 1em 1em 1em 1em;	-khtml-border-radius: 1em 1em 1em 1em;	-moz-border-radius: 1em 1em 1em 1em;	border-radius: 1em 1em 1em 1em;	min-height: 400px}#tweets{	width: 47%;	clear: left;	padding-top: 10px;	padding-right: 5px;	padding-left: 10px;	color: #FFFFFF;	font-family: RopaSansRegular, Garamond, serif;	}a:link {	COLOR: #CCCCCC;}a:visited {	COLOR: #CCCCCC;}a:hover {	COLOR: #FFFF00;}a:active {	COLOR: #CCCCCC;}	/*font-family: Tuffy, Arial, sans-serif;*/
+@charset "UTF-8";
+@import url("../_fonts/RopaSansRegular/stylesheet.css");
+/*time_capsule_style.css*/
+
+body {
+	background-color: #003366;
+	background-image: url(images/clokbkg.png);
+	background-repeat: no-repeat;
+	font-size: 100%;
+}
+.main {
+	margin: 1px;
+	padding: 1px;
+}
+	
+#container {
+	width: 95%;
+	max-width: 960px;
+	min-width: 0px;
+	margin-right: auto;
+	margin-left: auto;/
+	font-size: 16px;
+	border-bottom-width: thin;
+	border-bottom-style: solid;
+	border-bottom-color: #FFF;
+	
+
+	}
+#headline {
+	margin-bottom: 50px;
+	height: 28px;
+}
+#section{
+	width: 95%;
+	margin-right: auto;
+	margin-left: auto;/
+	clear: left;
+	max-width: 960px;
+	min-width: 0px;
+}
+
+
+#video_main{
+	width: 100%;
+	float: none;
+	margin-bottom: 20px;
+	clear: none;
+	border-bottom-width: thin;
+	border-bottom-style: solid;
+	border-bottom-color: #FFF;
+}
+
+#notes{
+	background-color: #FFFFFF;
+	width: 47%;
+	float: right;
+	padding-top: 10px;
+	padding-right: 5px;
+	padding-left: 10px;
+	margin-left:;
+/*	border-top-color: #0000FF;
+	border-right-color: #0000FF;
+	border-bottom-color: #0000FF;
+	border-left-color: #0000FF;*/
+	-webkit-border-radius: 1em 1em 1em 1em;
+	-khtml-border-radius: 1em 1em 1em 1em;
+	-moz-border-radius: 1em 1em 1em 1em;
+	border-radius: 1em 1em 1em 1em;
+	min-height: 400px
+}
+
+#tweets{
+	width: 47%;
+	clear: left;
+	padding-top: 10px;
+	padding-right: 5px;
+	padding-left: 10px;
+	color: #FFFFFF;
+	font-family: RopaSansRegular, Garamond, serif;	
+}
+
+a:link {
+	COLOR: #CCCCCC;
+}
+a:visited {
+	COLOR: #CCCCCC;
+}
+a:hover {
+	COLOR: #FFFF00;
+}
+a:active {
+	COLOR: #CCCCCC;
+}
+	/*font-family: Tuffy, Arial, sans-serif;*/
