iPad Landscape csse (see tclayout2 folder)
Adds iPadlandscape.css file which reformats the layout for iPad in the
landscape orientation. The video is changed from full screen witdth to
47% and floats left. The Notes expand to fill the right side of the
screen. The text for the tweets is changed to a smaller font so it fits
on the screen.

--- a/tclayout2/css/ipadlandscape.css
+++ b/tclayout2/css/ipadlandscape.css
@@ -1,3 +1,17 @@
 @charset "UTF-8";
 /* ipadlandscape.css */
 
+
+#video_main{
+	width: 47%;
+	float: left;
+	font-size: .5em;
+	margin-bottom: 5px;
+}
+#tweets{
+	padding-top: 2px;
+	font-size: 10px;
+}
+#headline {
+	height: 18px;
+}
